--- a/.gitignore
+++ b/.gitignore
@@ -103,5 +103,7 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-# Ignore local mocked arcpy module for working on machine w/o local GIS install
-arcpy.py
+
+# skip the location specific piexif install
+piexif/
+piexif-1.1.2.dist-info/
